--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,13 +1,19 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>React App</title>
+    <!--
+      Main HTML file for the React frontend application.
+      The root div is where the React app is mounted.
+      The main.jsx script is the entry point for the React app.
+    -->
   </head>
   <body>
+    <!-- Root element for React app -->
     <div id="root"></div>
+    <!-- React app entry script -->
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
